--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <body>
         <div id="root">not rendered</div>
 
-        <script src="./index.js" type="module"></script>
+        <script src="./App.tsx" type="module"></script>
     </body>
 </html>
